--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,55 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
+attrs==25.3.0
 beautifulsoup4==4.13.5
 certifi==2025.8.3
 charset-normalizer==3.4.3
 colorama==0.4.6
 contourpy==1.3.3
 cycler==0.12.1
+dataclasses-json==0.6.7
 distro==1.9.0
 fonttools==4.59.2
+frozenlist==1.7.0
 greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
+httpx-sse==0.4.1
 idna==3.10
 jiter==0.10.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 kiwisolver==1.4.9
 langchain==0.3.27
+langchain-community==0.3.29
 langchain-core==0.3.75
+langchain-openai==0.3.32
 langchain-text-splitters==0.3.11
 langsmith==0.4.21
+marshmallow==3.26.1
 matplotlib==3.10.6
+multidict==6.6.4
+mypy_extensions==1.1.0
 numpy==2.3.2
 openai==1.102.0
 orjson==3.11.3
 packaging==25.0
 pandas==2.3.2
 pillow==11.3.0
+propcache==0.3.2
 pydantic==2.11.7
+pydantic-settings==2.10.1
 pydantic_core==2.33.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.2
+regex==2025.9.1
 requests==2.32.5
 requests-toolbelt==1.0.0
 seaborn==0.13.2
@@ -44,9 +59,12 @@ sniffio==1.3.1
 soupsieve==2.8
 SQLAlchemy==2.0.43
 tenacity==9.1.2
+tiktoken==0.11.0
 tqdm==4.67.1
+typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+yarl==1.20.1
 zstandard==0.24.0
